<resources>
    <string name="app_name">রমাদান কর্ম পরিকল্পনা</string>
    <string name="importance_1">সমস্ত প্রশংসা আল্লাহ তাআলার জন্য, যিনি সারা বিশ্বজগতের প্রতিপালক। আমরা কেবল তাঁরই প্রশংসা করি, তাঁরই কাছে সাহায্য চাই, তাঁরই কাছে ক্ষমা প্রার্থনা করি। আমরা সব ধরনের পাপাচার, অন্যায় ও অনাচার থেকে মুক্তি পেতে আল্লাহর কাছে করুণা ভিক্ষা চাই। আল্লাহ যাকে হেদায়েত দেন, কেউ তাকে পথভ্রষ্ট করতে পারে না। আল্লাহ যাকে সঠিক পথ থেকে বিচ্যুত করেন, কেউ তাকে হেদায়েত করতে পারে না। নিশ্চয়ই আল্লাহ ছাড়া আর কোনো উপাস্য নেই, মাবুদ নেই; আর হজরত মুহাম্মাদ তাঁর বান্দা ও রাসূল। মহান আল্লাহ রাব্বুল আলামিন মানুষকে দিয়েছেন সর্বকালের সর্বশ্রেষ্ঠ ও সুন্দর জীবনব্যবস্থা যার নাম ইসলাম। ইসলামের মৌলিক পাঁচটি বুনিয়াদের একটি রোজা। আল্লাহ তাআলা পবিত্র কুরআনে বলেন-</string>
    <string name="importance_2">يَٰٓأَيُّهَا ٱلَّذِينَ ءَامَنُوا۟ كُتِبَ عَلَيْكُمُ ٱلصِّيَامُ كَمَا كُتِبَ عَلَى ٱلَّذِينَ مِن قَبْلِكُمْ لَعَلَّكُمْ تَتَّقُونَ</string>
    <string name="importance_3">“হে ইমানদারগণ! তোমাদের ওপর রোজা ফরজ করা হয়েছে, যেমনিভাবে ফরজ করা হয়েছিল তোমাদের পূর্ববর্তী লোকদের ওপর; যাতে করে তোমরা তাকওয়া অর্জন করতে পারো।” (আল বাকারা-২: ১৮৩)</string>
    <string name="importance_4">রমাদান মাসের প্রধান উদ্দেশ্য হলো তাকওয়া অবলম্বনের মাধ্যমে আল্লাহর নৈকট্য অর্জন করা। এই মাসটি আমাদের জন্য আল্লাহ তাআলার নিকটবর্তী হওয়া এবং তাঁর সাথে সম্পর্ক সুদৃঢ় করার সুবর্ণ সুযোগ। আল্লাহ আমাদের জানিয়েছেন-</string>
    <string name="importance_5">كل عمل ابن آدم له إلا الصيام؛ فإنه لي وأنا أجزي به</string>
    <string name="importance_6">“রোজা ব্যতীত আদম সন্তানের প্রতিটি কাজই তার নিজের জন্য, কিন্তু রোজা আমার জন্য। তাই আমি নিজেই এর প্রতিদান দেবো।“ (বুখারি : ১৭৮৩, মুসলিম : ২৫৭৭)</string>
    <string name="importance_7">রোজার এই উপবাস ও কামনা বাসনা থেকে বিরত থাকা হলো আল্লাহভীতির একটি বহিঃপ্রকাশ যা আল্লাহর নৈকট্য লাভের একটি বড়ো প্রচেষ্টা। আমাদের চেষ্টা করতে হবে এই দিনগুলোকে যেন সর্বোচ্চ পরিমাণে কাজে লাগাতে পারি।</string>
    <string name="importance_8">যে ব্যক্তি রমাদান মাস পেল কিন্তু গুনাহসমূহ মাফ করাতে পারল না রাসূল তাকে হতভাগা বলেছেন। এ মাসের প্রতিটি দিনকে কাজে লাগানোর সর্বোচ্চ চেষ্টা করা আমাদের সকলের কর্তব্য। আর রমাদানের প্রতিটি দিনকে কাজে লাগানোর সর্বোত্তম উপায় হতে পারে একটি ‘রমাদান কর্মপরিকল্পনা প্রণয়ন করা। পরিকল্পনামাফিক কাজ না করতে পারলে মূলত কোনো কিছু করেই কাঙ্ক্ষিত সফলতা পাওয়া যায় না।</string>
    <string name="importance_9">রমাদান শুরুর আগে সুন্দর একটি পরিকল্পনা গ্রহণ করুন তাহলে আপনি নিজে কতটুকু সংশোধিত হতে পারলেন কিংবা ইবাদতের ব্যাপারে আপনার প্রত্যাশা কতটুকু আর আমল কতটুকু করতে পেরেছেন তা যাচাই করা সহজ হয়ে যাবে। এই কর্মপরিকল্পনাটি আপনাকে সাহায্য করবে রমাদানকে সর্বোত্তম উপায়ে কাজে লাগাতে। রমাদানের পবিত্র চেতনাকে গোটা মাস ধরে এমনকী রমাদান পরবর্তী বছরের বাকি সময়গুলোতেও ধরে রাখতে সহায়ক হবে এই পরিকল্পনা। মনে রাখবেন, রমাদান আপনাকে সেই বিশেষ সুযোগটি এনে দিয়েছে যাতে আপনি নির্ণয় করতে পারেন যে, দিন শেষে নিজেকে কতটা উন্নত করতে পেরেছেন।</string>
    <string name="importance_10">আপনি যখন রিপোর্ট লিখবেন, তখন প্রতিটি রিপোর্টের ওপর নিজের দৈনিক পর্যালোচনা ও অর্জন লিখতে ভুলবেন না। এই মাসের সর্বোত্তম ব্যবহার নিশ্চিত করার জন্য চেষ্টা করবেন যাতে অনেকগুলো কাজের ভার আপনার ঘাড়ে না এসে পড়ে; বরং আপনি দৈনিক যে লক্ষ্যগুলো নির্ধারণ করেছেন সেগুলো পূরণ করার জন্যই সময় ব্যয় করার চেষ্টা করুন। আল্লাহ তাআলা এই মাসে আমাদের অফুরন্ত নিয়ামত পাওয়ার যে সুযোগ করে দিয়েছেন তা অর্জন করার জন্য ঐকান্তিক প্রচেষ্টা ও একনিষ্ঠতা যাতে সবসময় সঠিকভাবে থাকে তা নিশ্চিত করুন।</string>
    <string name="importance_11">মহান আল্লাহ এই রমাদানকে আমাদের জন্য কল্যাণকর, ইতিবাচক এবং শরীর ও আত্মার পরিশুদ্ধতার মাস হিসেবে কবুল করুন। আল্লাহ আমাদের মনের সব চাওয়া পূরণ করুন, সব ইবাদত কবুল করুন, আমাদের বলিষ্ঠ রাখুন এবং বুদ্ধিবৃত্তিক ও আধ্যাত্মিকভাবে আগামী রমাদান অবধি উজ্জীবিত থাকার সুযোগ করে দিন।</string>
    <string name="importance_12">আসুন, পরিকল্পনা শুরু করি।</string>


    <string name="duah_1_name">ইফতারের পূর্বের দুআ</string>
    <string name="duah_1">اَللّٰهُمَّ إِنِّيْ أَسْأَلُكَ بِرَحْمَتِكَ الَّتِيْ وَسِعَتْ كُلَّ شَيْءٍ أَنْ تَغْفِرَ لِيْ</string>
    <string name="duah_1_bangla">উচ্চারণ : আল্লাহুম্মা ইন্নি আসয়ালুকা বিরাহমাতিকাল্লাতি ওয়াসিয়াত কুল্লা শাইয়িন আন তাগফিরালি ।</string>
    <string name="duah_1_meaning">অর্থ: “হে আল্লাহ! তোমার যে রহমত সকল কিছু পরিবেষ্টন করে রেখেছে, তার দ্বারা প্রার্থনা করছি- তুমি আমাকে ক্ষমা করে দাও।” (ইবনে মাজাহ : ১৭৫৩)</string>

    <string name="duah_2_name">ইফতার শুরুর দুআ</string>
    <string name="duah_2">أللّهُمَّ لَكَ صُمْتُ وَعَلى رِزْقِكَ أفْطَرْتُ</string>
    <string name="duah_2_bangla">উচ্চারণ : আল্লাহম্মা লাকা সুমতু ওয়া আলা রিজকিকা আফতারতু।</string>
    <string name="duah_2_meaning">অর্থ : "হে আল্লাহ! আমি একমাত্র তোমারই সন্তুষ্টির উদ্দেশ্যে রোজা রেখেছি, আর তোমারই দেওয়া রিজিক দিয়ে ইফতার করছি।" (আবু দাউদ : ২৩৫০)</string>

    <string name="duah_3_name">ইফতারের পরের দুআ</string>
    <string name="duah_3">ذَهَبَ الظَّمَأُ وابْتَلَّتِ العُرُوقُ وثَبَتَ الأَجْرُ إنْ شاءَ اللَّـه</string>
    <string name="duah_3_bangla">উচ্চারণ : জাহাবাজ জমাউ ওয়াব তাল্লাতিল উরুকু ওয়া সাবাতাল আজরু ইনশাআল্লাহ ।</string>
    <string name="duah_3_meaning">অর্থ : পিপাসা দূর হলো, শিরা-উপশিরা সিক্ত হলো এবং নেকি নির্ধারিত হলো যদি আল্লাহ চান। (আবু দাউদ : ২৩৪৯)</string>

    <string name="duah_4_name">কেউ ইফতার করালে তার জন্য দুআ</string>
    <string name="duah_4">أَفْطَرَ عِنْدَكُمْ الصَّائِمُوْنَ وَأَكَلَ طَعَامَكُمُ الْأبْرَارُ وَصلَّتْ عَلَيْكُمْ الْمَلأَئِكَةُ</string>
    <string name="duah_4_bangla">উচ্চারণ : আফত্বরা ইনদাকুমুস সায়িমুনা, ওয়া আকালা ত্বয়ামাকুমুল আবরারু ওয়া সাল্লাত আলাইকুমুল মালায়িকাহ।</string>
    <string name="duah_4_meaning">অর্থ : "সিয়াম পালনকারীগণ তোমাদের নিকট ইফতার করুক, সৎ লোকগণ তোমাদের আহার গ্রহণ করুক এবং ফেরেশতাগণ তোমাদের জন্য দুআ করুক।" (আবু দাউদ : ৩৮১১, ইবনে মাজাহ : ১৭৪৭, ইবনে হিব্বান : ৫২৯৬)</string>

    <string name="duah_5_name">পাপ ও ঋণ থেকে বাঁচার দুআ</string>
    <string name="duah_5">اَللَّـهُمَّ إِنِّي أَعُوْذُبِكَ مِنَ الْمَاْثَمِ وَالْمَغْرَمِ</string>
    <string name="duah_5_bangla">উচ্চারণ : আল্লাহুম্মা ইন্নি আউযুবিকা মিনাল মা’সামি ওয়াল মাগরাম।</string>
    <string name="duah_5_meaning">অর্থ : "হে আল্লাহ! আমি পাপ ও ঋণ থেকে আপনার কাছে আশ্রয় প্রার্থনা করছি।" (বুখারি : ২২৩৯, মুসলিম : ১২০৩)</string>

    <string name="duah_6_name">তওবা ও ইস্তিগফারের দুআ</string>
    <string name="duah_6">رَبِّ اغفِر وَارحَم وَأَنتَ خَيرُ الرّاحِمينَ</string>
    <string name="duah_6_bangla">উচ্চারণ : রাব্বিগফির ওয়ার হাম ওয়া আনতা খায়রুর রাহিমিন।</string>
    <string name="duah_6_meaning">অর্থ : : "হে আমার প্রতিপালক! আমাকে ক্ষমা করুন ও দয়া করুন, আপনিই তো সর্বশ্রেষ্ঠ দয়ালু।" (আল মুমিনুন-২৩ : ১১৮)</string>

    <string name="duah_7_name">কবুল হয় যাদের দুআ</string>
    <string name="duah_7">عَنْ اَبِيۡ هُرَيۡرَةَ قَالَ قَالَ رَسُوۡلُ اللّٰهِ صَلَّى اللِّٰهُ عَلَيۡهِ وَسَلَّمَ ثَلاَثَهُ لَا تُرَدُّ دَعۡوَاتُهُمْ اَلصَّائِمُ حَتّٰی يُفۡطِرَ وَالإِمَامُ الْعَدۡلُ وَدَعۡوَةُ الْمَظۡلُوۡمِ يَرۡفَعُهَا اللّٰهُ فَرْقَ الۡغَمَامِ وَيَفۡتَحُ لَهَا اَبْوَابَ السَّمَاءِ وَيَقُوۡلُ الرَّبُّ وَعِزَّتِيۡ لَأَ نۡصُرَنَّكَ وَلَوْ بَعۡدَ حِيْنِِ.</string>
    <string name="duah_7_meaning">"আবু হুরায়রা (রা:) হতে বর্ণিত । তিনি বলেন, রাসূলুল্লাহ বলেছেন, তিন শ্রেণির লোকের দুআ ফেরত দেওয়া হয় না। ১. সিয়াম পালনকারী, যতক্ষণ পর্যন্ত না সে ইফতার করে। ২. ন্যায়পরায়ণ বাদশাহ। ৩. মজলুম ব্যক্তি । এই তিন ব্যক্তির দুআ আল্লাহ তাআলা মেঘের ওপরে উঠিয়ে নেন এবং এর জন্য আকাশের দরজা খুলে দেন। আল্লাহ তাআলা তাঁর ইজ্জতের কসম খেয়ে বলেন, আমি অবশ্যই তোমাকে সাহায্য করব- যদিও দেরিতে হয়।" (তিরমিজি : ৩৫৯৮, ইবনে মাজাহ : ১৭৫২ )</string>


    <string name="prottoy_1">আমি অত্যন্ত একাগ্রচিত্তে ও গোপনে আমার প্রতিপালক মহান আল্লাহ রাব্বুল আলামিনের সাথে এই প্রতিজ্ঞা করছি যে আমি তাঁরই কাছে সাহায্য চাই, তিনি যেন আমাকে কবুল করেন । আমি যে কাজটুকুই করি, তা আমার নিয়তের ওপর নির্ভরশীল। আমি সাক্ষ্য দিচ্ছি যে, আমি সবসময় আমার নিয়তকে বিশুদ্ধ রাখব। সেই সাথে, সব সময় আল্লাহ তাআলার কাছে ক্ষমা চাইতে থাকব, যাতে আমি তাঁর সন্তুষ্টি অর্জন করতে পারি ।</string>
    <string name="prottoy_2">আমি প্রতিজ্ঞা করছি যে, নিজেকে অন্য কারও সাথে তুলনা করব না। আমি বিশ্বাস করি যে, প্রত্যেকের অবস্থান ভিন্ন। তাই আমি নিজেকে তখনই সফল মনে করব, যখন আজকের আমি গতকালের আমি থেকে উত্তম হতে পারব। এই রমাদানে নিজের চরিত্র উন্নয়নের মাধ্যমে আমি নিজেকে আরও ভালোভাবে তৈরি করব। প্রতিদিনই আত্ম-বিশ্লেষণের মাধ্যমে নিজেকে উন্নত করব, অন্যকে ক্ষমা করব, খারাপ কাজগুলো থেকে বিরত থাকব এবং সুন্দর ও ইতিবাচক কিছু কাজ করব সেই সাথে নিজেকে সঠিক পথে ধরে রাখার জন্য আরও বেশি সচেষ্ট হব। আমি এই রমাদানে যা শিখব এবং অনুশীলন করব তা বছরের বাকি মাসগুলোতেও অব্যাহত রাখার ব্যাপারে সচেষ্ট থাকব। আল্লাহ তাআলা যেন আমাকে সঠিক পথের দিশা দিয়ে সাহায্য করেন, যাতে করে রমাদানকে আমি গঠনমূলকভাবে কাজে লাগাতে পারি।</string>
    <string name="prottoy_3">আমি যেন সম্পূর্ণভাবে আল্লাহর সামনে নিজেকে সঁপে দিতে পারি, পরিপূর্ণভাবে আত্মসমর্পণ করতে পারি। </string>

    <string name="about_app">আসসালামু আলাইকুম, আলহামদুলিল্লাহ! রমাদান কর্মপরিকল্পনা এ্যাপটি আল্লাহর অশেষ মেহেরবানীতে রিলিজ করতে পেরে আমরা সত্যিই খুব বেশি আনন্দিত। প্রতিদিন এ্যাপে আপনার রিপোর্ট দিন, পর্যালোচনা করুন এবং নিজেকে আরো এক ধাপ এগিয়ে নিন। আশা করছি এ্যাপটি উম্মাহর কাজে লাগবে ইনশাআল্লাহ। রব্বুল আলামীন আমাদের সকল কাজগুলোকে তার দ্বীনের জন্য কবুল করে নিক। (আমিন)। \n\nডেভেলপারের জন্য দোয়া চাই। </string>
</resources>