<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportanceActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginTop="100dp"
                android:src="@drawable/bismillah"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:textAlignment="center"
                style="@style/paragraph"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:layout_height="wrap_content"
                android:text="পরম করুণাময় আল্লাহ রাব্বুল আলামিনের নামে শুরু করছি।"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:textColor="@color/sky"
                android:fontFamily="@font/amiri_arabic_font"
                android:layout_height="wrap_content"
                android:text="@string/importance_2"/>

            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:textColor="@color/sky"
                android:layout_height="wrap_content"
                android:text="@string/importance_3"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:textColor="@color/sky"
                android:fontFamily="@font/amiri_arabic_font"
                android:layout_height="wrap_content"
                android:text="@string/importance_5"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:textColor="@color/sky"
                android:layout_height="wrap_content"
                android:text="@string/importance_6"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_7"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_8"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_9"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_10"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_11"/>
            <TextView
                android:layout_width="match_parent"
                style="@style/paragraph"
                android:layout_height="wrap_content"
                android:text="@string/importance_12"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/goToMainActivity"
                    android:layout_width="wrap_content"
                    android:text="শুরু করুন"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>